split/netenv/4-adv-netwotk/55-TLS/1-k8s-ingress-controller/2-ingress/5-Ingress-https-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-nginx-ingress
  namespace: sandbox
  #annotations:
  #  kubernetes.io/ingress.class: "nginx"

spec:
  tls:
  - hosts:
    - https-example.foo.com
    secretName: https-example-secret 
  ingressClassName: nginx
  rules:
  - host: https-example.foo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nettool
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ns-http-nginx-ingress
  #annotations:
  #  kubernetes.io/ingress.class: "nginx"

spec:
  tls:
  - hosts:
    - default-ns-https-example.foo.com
    secretName: default-ns-https-example-secret
  ingressClassName: nginx
  rules:
  - host: default-ns-https-example.foo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nettool
            port:
              number: 80
